chore: avoid Java version mismatch
Signed-off-by: Niels Pardon <par@zurich.ibm.com>