@@ -4,7 +4,7 @@ import io.substrait.dsl.SubstraitBuilder;
 import io.substrait.expression.ExpressionCreator;
 import io.substrait.relation.Rel;
 import io.substrait.type.TypeCreator;
-import java.util.List;
+import java.util.Arrays;
 import org.junit.jupiter.api.Test;
 
 public class EmptyArrayLiteralTest extends PlanTestBase {
@@ -18,9 +18,9 @@ public class EmptyArrayLiteralTest extends PlanTestBase {
     var emptyListLiteral = ExpressionCreator.emptyList(false, N.I8);
     var rel =
         b.project(
-            input -> List.of(emptyListLiteral),
+            input -> Arrays.asList(emptyListLiteral),
             Rel.Remap.offset(1, 1),
-            b.namedScan(List.of("t"), List.of("col"), List.of(colType)));
+            b.namedScan(Arrays.asList("t"), Arrays.asList("col"), Arrays.asList(colType)));
     assertFullRoundTrip(rel);
   }
 
@@ -30,9 +30,9 @@ public class EmptyArrayLiteralTest extends PlanTestBase {
     var emptyListLiteral = ExpressionCreator.emptyList(true, N.I8);
     var rel =
         b.project(
-            input -> List.of(emptyListLiteral),
+            input -> Arrays.asList(emptyListLiteral),
             Rel.Remap.offset(1, 1),
-            b.namedScan(List.of("t"), List.of("col"), List.of(colType)));
+            b.namedScan(Arrays.asList("t"), Arrays.asList("col"), Arrays.asList(colType)));
     assertFullRoundTrip(rel);
   }
 }
