@@ -2,10 +2,11 @@ package io.substrait.isthmus;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
+import com.google.common.collect.ImmutableSet;
 import io.substrait.plan.Plan.Root;
 import io.substrait.type.Type;
 import io.substrait.type.TypeCreator;
-import java.util.List;
+import java.util.Arrays;
 import java.util.Set;
 import org.apache.calcite.rel.RelRoot;
 import org.apache.calcite.rel.type.RelDataType;
@@ -17,10 +18,10 @@ public class SubstraitToCalciteTest extends PlanTestBase {
 
   @Test
   void testConvertRootSingleColumn() {
-    Iterable<Type> types = List.of(TypeCreator.REQUIRED.STRING);
+    Iterable<Type> types = Arrays.asList(TypeCreator.REQUIRED.STRING);
     Root root =
         Root.builder()
-            .input(substraitBuilder.namedScan(List.of("stores"), List.of("s"), types))
+            .input(substraitBuilder.namedScan(Arrays.asList("stores"), Arrays.asList("s"), types))
             .addNames("store")
             .build();
 
@@ -31,10 +32,12 @@ public class SubstraitToCalciteTest extends PlanTestBase {
 
   @Test
   void testConvertRootMultipleColumns() {
-    Iterable<Type> types = List.of(TypeCreator.REQUIRED.I64, TypeCreator.REQUIRED.STRING);
+    Iterable<Type> types = Arrays.asList(TypeCreator.REQUIRED.I64, TypeCreator.REQUIRED.STRING);
     Root root =
         Root.builder()
-            .input(substraitBuilder.namedScan(List.of("stores"), List.of("s_store_id", "s"), types))
+            .input(
+                substraitBuilder.namedScan(
+                    Arrays.asList("stores"), Arrays.asList("s_store_id", "s"), types))
             .addNames("s_store_id", "store")
             .build();
 
@@ -47,27 +50,29 @@ public class SubstraitToCalciteTest extends PlanTestBase {
   void testConvertRootStructField() {
     final Type structType =
         TypeCreator.REQUIRED.struct(TypeCreator.REQUIRED.I64, TypeCreator.REQUIRED.STRING);
-    Iterable<Type> types = List.of(structType);
+    Iterable<Type> types = Arrays.asList(structType);
     Root root =
         Root.builder()
             .input(
                 substraitBuilder.namedScan(
-                    List.of("stores"), List.of("s", "s_store_id", "s_store_name"), types))
+                    Arrays.asList("stores"),
+                    Arrays.asList("s", "s_store_id", "s_store_name"),
+                    types))
             .addNames("store", "store_id", "store_name")
             .build();
 
-    assertEquals(List.of("store", "store_id", "store_name"), root.getNames());
+    assertEquals(Arrays.asList("store", "store_id", "store_name"), root.getNames());
 
     RelRoot relRoot = converter.convert(root);
 
     // Apache Calcite's RelRoot.fields only contains the top level field names
-    assertEquals(List.of("store"), relRoot.fields.rightList());
+    assertEquals(Arrays.asList("store"), relRoot.fields.rightList());
 
     // the sub field names are stored within RelRoot.validatedRowType
-    assertEquals(List.of("store"), relRoot.validatedRowType.getFieldNames());
+    assertEquals(Arrays.asList("store"), relRoot.validatedRowType.getFieldNames());
 
     RelDataType storeFieldDataType = relRoot.validatedRowType.getFieldList().get(0).getType();
-    assertEquals(List.of("store_id", "store_name"), storeFieldDataType.getFieldNames());
+    assertEquals(Arrays.asList("store_id", "store_name"), storeFieldDataType.getFieldNames());
   }
 
   @Test
@@ -75,29 +80,31 @@ public class SubstraitToCalciteTest extends PlanTestBase {
     final Type structType =
         TypeCreator.REQUIRED.struct(TypeCreator.REQUIRED.I64, TypeCreator.REQUIRED.STRING);
     final Type arrayType = TypeCreator.REQUIRED.list(structType);
-    Set<Type> types = Set.of(arrayType);
+    Set<Type> types = ImmutableSet.of(arrayType);
     Root root =
         Root.builder()
             .input(
                 substraitBuilder.namedScan(
-                    List.of("stores"), List.of("s", "s_store_id", "s_store_name"), types))
+                    Arrays.asList("stores"),
+                    Arrays.asList("s", "s_store_id", "s_store_name"),
+                    types))
             .addNames("store", "store_id", "store_name")
             .build();
 
     RelRoot relRoot = converter.convert(root);
 
     // Apache Calcite's RelRoot.fields only contains the top level field names
-    assertEquals(List.of("store"), relRoot.fields.rightList());
+    assertEquals(Arrays.asList("store"), relRoot.fields.rightList());
 
     // the hierarchical structure is stored within RelRoot.validatedRowType
-    assertEquals(List.of("store"), relRoot.validatedRowType.getFieldNames());
+    assertEquals(Arrays.asList("store"), relRoot.validatedRowType.getFieldNames());
 
     RelDataType storeFieldDataType = relRoot.validatedRowType.getFieldList().get(0).getType();
     assertEquals(SqlTypeName.ARRAY, storeFieldDataType.getSqlTypeName());
 
     final RelDataType arrayElementType = storeFieldDataType.getComponentType();
     assertEquals(SqlTypeName.ROW, arrayElementType.getSqlTypeName());
-    assertEquals(List.of("store_id", "store_name"), arrayElementType.getFieldNames());
+    assertEquals(Arrays.asList("store_id", "store_name"), arrayElementType.getFieldNames());
   }
 
   @Test
@@ -105,29 +112,31 @@ public class SubstraitToCalciteTest extends PlanTestBase {
     final Type structType =
         TypeCreator.REQUIRED.struct(TypeCreator.REQUIRED.I64, TypeCreator.REQUIRED.STRING);
     final Type mapValueType = TypeCreator.REQUIRED.map(TypeCreator.REQUIRED.I64, structType);
-    Set<Type> types = Set.of(mapValueType);
+    Set<Type> types = ImmutableSet.of(mapValueType);
     Root root =
         Root.builder()
             .input(
                 substraitBuilder.namedScan(
-                    List.of("stores"), List.of("s", "s_store_id", "s_store_name"), types))
+                    Arrays.asList("stores"),
+                    Arrays.asList("s", "s_store_id", "s_store_name"),
+                    types))
             .addNames("store", "store_id", "store_name")
             .build();
 
     final RelRoot relRoot = converter.convert(root);
 
     // Apache Calcite's RelRoot.fields only contains the top level field names
-    assertEquals(List.of("store"), relRoot.fields.rightList());
+    assertEquals(Arrays.asList("store"), relRoot.fields.rightList());
 
     // the hierarchical structure is stored within RelRoot.validatedRowType
-    assertEquals(List.of("store"), relRoot.validatedRowType.getFieldNames());
+    assertEquals(Arrays.asList("store"), relRoot.validatedRowType.getFieldNames());
 
     final RelDataType storeFieldDataType = relRoot.validatedRowType.getFieldList().get(0).getType();
     assertEquals(SqlTypeName.MAP, storeFieldDataType.getSqlTypeName());
 
     final RelDataType mapValueDataType = storeFieldDataType.getValueType();
     assertEquals(SqlTypeName.ROW, mapValueDataType.getSqlTypeName());
-    assertEquals(List.of("store_id", "store_name"), mapValueDataType.getFieldNames());
+    assertEquals(Arrays.asList("store_id", "store_name"), mapValueDataType.getFieldNames());
   }
 
   @Test
@@ -135,28 +144,30 @@ public class SubstraitToCalciteTest extends PlanTestBase {
     final Type structType =
         TypeCreator.REQUIRED.struct(TypeCreator.REQUIRED.I64, TypeCreator.REQUIRED.STRING);
     final Type mapKeyType = TypeCreator.REQUIRED.map(structType, TypeCreator.REQUIRED.I64);
-    Set<Type> types = Set.of(mapKeyType);
+    Set<Type> types = ImmutableSet.of(mapKeyType);
     Root root =
         Root.builder()
             .input(
                 substraitBuilder.namedScan(
-                    List.of("stores"), List.of("s", "s_store_id", "s_store_name"), types))
+                    Arrays.asList("stores"),
+                    Arrays.asList("s", "s_store_id", "s_store_name"),
+                    types))
             .addNames("store", "store_id", "store_name")
             .build();
 
     RelRoot relRoot = converter.convert(root);
 
     // Apache Calcite's RelRoot.fields only contains the top level field names
-    assertEquals(List.of("store"), relRoot.fields.rightList());
+    assertEquals(Arrays.asList("store"), relRoot.fields.rightList());
 
     // the hierarchical structure is stored within RelRoot.validatedRowType
-    assertEquals(List.of("store"), relRoot.validatedRowType.getFieldNames());
+    assertEquals(Arrays.asList("store"), relRoot.validatedRowType.getFieldNames());
 
     RelDataType storeFieldDataType = relRoot.validatedRowType.getFieldList().get(0).getType();
     assertEquals(SqlTypeName.MAP, storeFieldDataType.getSqlTypeName());
 
     final RelDataType mapKeyDataType = storeFieldDataType.getKeyType();
     assertEquals(SqlTypeName.ROW, mapKeyDataType.getSqlTypeName());
-    assertEquals(List.of("store_id", "store_name"), mapKeyDataType.getFieldNames());
+    assertEquals(Arrays.asList("store_id", "store_name"), mapKeyDataType.getFieldNames());
   }
 }
